--- a/index.html
+++ b/index.html
@@ -6,26 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="app.js"></script>
   </head>
   <body>
     <div class="container">
-      <input type="text" class="calculator-result" />
+      <input type="text" class="calculator-result" id="result" />
       <div class="calculator-layout">
         <button type="button" class="calculator-button clear-button">C</button>
         <button type="button" class="calculator-button">/</button>
-        <button type="button" class="calculator-button">7</button>
-        <button type="button" class="calculator-button">8</button>
-        <button type="button" class="calculator-button">9</button>
+        <button type="button" class="calculator-button" onclick="display('7')">
+          7
+        </button>
+        <button type="button" class="calculator-button" onclick="display('8')">
+          8
+        </button>
+        <button type="button" class="calculator-button" onclick="display('9')">
+          9
+        </button>
         <button type="button" class="calculator-button">x</button>
-        <button type="button" class="calculator-button">4</button>
-        <button type="button" class="calculator-button">5</button>
-        <button type="button" class="calculator-button">6</button>
+        <button type="button" class="calculator-button" onclick="display('4')">
+          4
+        </button>
+        <button type="button" class="calculator-button" onclick="display('5')">
+          5
+        </button>
+        <button type="button" class="calculator-button" onclick="display('6')">
+          6
+        </button>
         <button type="button" class="calculator-button">-</button>
-        <button type="button" class="calculator-button">1</button>
-        <button type="button" class="calculator-button">2</button>
-        <button type="button" class="calculator-button">3</button>
+        <button type="button" class="calculator-button" onclick="display('1')">
+          1
+        </button>
+        <button type="button" class="calculator-button" onclick="display('2')">
+          2
+        </button>
+        <button type="button" class="calculator-button" onclick="display('3')">
+          3
+        </button>
         <button type="button" class="calculator-button">+</button>
-        <button type="button" class="calculator-button zero-button">0</button>
+        <button
+          type="button"
+          class="calculator-button zero-button"
+          onclick="display('0')"
+        >
+          0
+        </button>
         <button type="button" class="calculator-button">=</button>
       </div>
     </div>
