-- added a functionality to clear input screen.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <div class="container">
       <input type="text" class="calculator-result" id="result" />
       <div class="calculator-layout">
-        <button type="button" class="calculator-button clear-button">C</button>
-        <button type="button" class="calculator-button">/</button>
+        <button
+          type="button"
+          class="calculator-button clear-button"
+          onclick="clearScreen()"
+        >
+          C
+        </button>
+        <button type="button" class="calculator-button" onclick="display('/')">
+          /
+        </button>
         <button type="button" class="calculator-button" onclick="display('7')">
           7
         </button>
@@ -23,7 +31,9 @@
         <button type="button" class="calculator-button" onclick="display('9')">
           9
         </button>
-        <button type="button" class="calculator-button">x</button>
+        <button type="button" class="calculator-button" onclick="display('*')">
+          x
+        </button>
         <button type="button" class="calculator-button" onclick="display('4')">
           4
         </button>
@@ -33,7 +43,9 @@
         <button type="button" class="calculator-button" onclick="display('6')">
           6
         </button>
-        <button type="button" class="calculator-button">-</button>
+        <button type="button" class="calculator-button" onclick="display('-')">
+          -
+        </button>
         <button type="button" class="calculator-button" onclick="display('1')">
           1
         </button>
@@ -43,7 +55,9 @@
         <button type="button" class="calculator-button" onclick="display('3')">
           3
         </button>
-        <button type="button" class="calculator-button">+</button>
+        <button type="button" class="calculator-button" onclick="display('+')">
+          +
+        </button>
         <button
           type="button"
           class="calculator-button zero-button"
