--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="app.js"></script>
   </head>
   <body>
+    <h2 class="title-text">CALCULATOR</h2>
     <div class="container">
       <input type="text" class="calculator-result" id="result" />
       <div class="calculator-layout">
@@ -65,7 +66,7 @@
         >
           0
         </button>
-        <button type="button" class="calculator-button">=</button>
+        <button type="button" class="calculator-button" onclick="calculatorOperations()">=</button>
       </div>
     </div>
   </body>
